Part 3/Exercise 3.01/logoutput/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      containers:
      - name: log-output
        image: gcr.io/dwk-gke-445811/log-output
        imagePullPolicy: IfNotPresent
