Part 3/Exercise 3.01/logoutput/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-output-svc
  namespace: exercises
spec:
  type: LoadBalancer
  selector:
    app: log-output
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
